--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 
 # git pull https://github.com/ArtErusov/MainReact
+# test
 # git add .
 # git commit -m “ ”
 # git push origin master
